# guardian

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  ci.yml.disabled
include/mguard/: config.h.in
src/: CMakeLists.txt  config.c  config.h  guard.c  guard.h  interpose.c  interpose.h  mguard.c  quarantine.c  quarantine.h  registry.c  registry.h  report.c  report.h
tests/: CMakeLists.txt  check_detection.sh  test_aligned.c  test_basic.c  test_calloc.c  test_chain.c  test_double_free.c  test_edge_cases.c  test_large_alloc.c  test_mmap_basic.c  test_mmap_edge.c  test_mmap_offbyone.c  test_mmap_overflow.c  test_overflow.c  test_overflow_aligned.c  test_overflow_calloc.c  test_overflow_large.c  test_overflow_offbyone.c  test_overflow_realloc.c  test_quarantine.c  test_realloc.c  test_realloc_freed.c  test_stress.c  test_uaf.c  test_underflow.c
